# megasdk

contrib/cmake/: CMakeLists.txt
include/: mega.h
include/mega/: config-android.h  config.h.in.cmake
include/mega/posix/: megasys.h
